--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
   "license": "ISC",
   "husky": {
     "hooks": {
-      "pre-commit": "pnpm run prettier-format && pnpm run lint",
-      "pre-push": ""
+      "pre-push": "echo \"[Husky] pre-push\"",
+      "applypatch-msg": "echo \"[Husky] applypatch-msg\"",
+      "pre-applypatch": "echo \"[Husky] pre-applypatch\"",
+      "post-applypatch": "echo \"[Husky] post-applypatch\"",
+      "pre-commit": "echo \"[Husky] pre-commit\""
     }
   },
   "eslintConfig": {
@@ -53,7 +56,7 @@
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "husky": "^7.0.4",
+    "husky": "^4.3.8",
     "lint-staged": "^12.4.0",
     "prettier": "^2.6.2",
     "symlink-config": "^0.1.2",
