--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "1.0.0",
   "description": "A bunch of one-liners and simple workhorse functions that I'll add to as I remember to.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "lint": "eslint . --ext .ts",
+    "build": "rimraf ./dist && tsc && pnpm copy-files",
+    "build-server": "tsc --project ./tsconfig.server.json",
+    "serve": "node ./server.js",
+    "copy-files": "copyfiles -u 1 src/index.html dist/ && copyfiles -u 1 src/**/*.html src/**/*.css dist/",
     "lint-and-fix": "eslint . --ext .ts --fix",
     "prettier-format": "prettier --write 'src/**/*.ts'",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -14,6 +19,10 @@
   "license": "ISC",
   "eslintConfig": {
     "root": true,
+    "env": {
+      "browser": true,
+      "node": true
+    },
     "parser": "@typescript-eslint/parser",
     "plugins": [
       "@typescript-eslint",
@@ -41,14 +50,22 @@
     "printWidth": 80
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/ip": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
+    "chalk": "^5.0.1",
+    "copyfiles": "^2.4.1",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "express": "^4.17.3",
     "husky": "^7.0.4",
+    "ip": "^1.1.5",
     "lint-staged": "^12.4.0",
     "prettier": "^2.6.2",
+    "rimraf": "^3.0.2",
+    "serve-static": "^1.15.0",
     "symlink-config": "^0.1.2",
     "typescript": "^4.6.3"
   }
